.provarCaches/00D410000011HE0EAM/objects/slackv2__Slack_Message__c.object
<CustomObject>
    <fields>
        <fullName>slackv2__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Slack Messages</relationshipLabel>
        <relationshipName>Slack_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>slackv2__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Slack Messages</relationshipLabel>
        <relationshipName>Slack_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>slackv2__Channel_Id__c</fullName>
        <label>Channel Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Channel_Name__c</fullName>
        <label>Channel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Channel_Type__c</fullName>
        <label>Channel Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Slack Messages</relationshipLabel>
        <relationshipName>Slack_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>slackv2__Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>slackv2__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Slack Messages</relationshipLabel>
        <relationshipName>Slack_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>slackv2__Message_Url__c</fullName>
        <label>Message Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Slack Messages</relationshipLabel>
        <relationshipName>Slack_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>slackv2__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Team_Id__c</fullName>
        <label>Team Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Time_Stamp__c</fullName>
        <label>Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>slackv2__User_Image_Url__c</fullName>
        <label>User Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Slack Message</label>
    <nameField>
        <displayFormat>SM-{0000000}</displayFormat>
        <label>Slack Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slack Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>